--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -1,4 +1,26 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".MainActivity">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
+    android:background="@drawable/kitchen"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MenuActivity">
+
+    <TextView
+        android:id="@+id/wynik2"
+        android:layout_width="191dp"
+        android:layout_height="26dp"
+        android:layout_marginBottom="104dp"
+        android:text=""
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wynik"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/vertical_acceleration_text"
@@ -52,40 +74,54 @@
         app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <View
+    <ImageView
         android:id="@+id/patelnia"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="284dp"
-        android:background="#42E97F"
+        android:layout_width="260dp"
+        android:layout_height="268dp"
+        android:layout_marginTop="272dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <View android:id="@+id/kotlet" android:layout_width="40dp" android:layout_height="40dp" android:layout_marginStart="60dp" android:layout_marginTop="48dp" android:background="#BE0542" app:layout_constraintStart_toStartOf="@id/patelnia" app:layout_constraintTop_toTopOf="@id/patelnia"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/pan" />
+
+    <ImageView
+        android:id="@+id/steak"
+        android:layout_width="116dp"
+        android:layout_height="92dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintStart_toStartOf="@id/patelnia"
+        app:layout_constraintTop_toTopOf="@id/patelnia"
+        app:srcCompat="@drawable/right_raw" />
 
     <TextView
         android:id="@+id/wynik"
-        android:layout_width="413dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="191dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="104dp"
         android:text=""
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.531"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/patelnia"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.127" />
 
     <TextView android:id="@+id/strona1view" android:layout_width="84dp" android:layout_height="54dp" android:layout_marginStart="100dp" android:layout_marginTop="46dp" android:layout_marginBottom="59dp" android:text="TextView" app:layout_constraintBottom_toTopOf="@+id/patelnia" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/vertical_acceleration_text" app:layout_constraintVertical_bias="0.0"/>
     <TextView android:id="@+id/strona2view" android:layout_width="86dp" android:layout_height="53dp" android:layout_marginStart="40dp" android:layout_marginTop="46dp" android:layout_marginBottom="59dp" android:text="TextView" app:layout_constraintBottom_toTopOf="@+id/patelnia" app:layout_constraintStart_toEndOf="@+id/strona1view" app:layout_constraintTop_toBottomOf="@+id/vertical_acceleration_text" app:layout_constraintVertical_bias="0.0"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/end_cooking_button"
         android:layout_width="177dp"
         android:layout_height="63dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="12dp"
         android:text="Zakończ smażenie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/patelnia" />
+        app:layout_constraintTop_toBottomOf="@+id/wynik2" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
