--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -8,77 +8,22 @@
     android:layout_height="match_parent"
     tools:context=".MenuActivity">
 
-    <TextView
-        android:id="@+id/wynik2"
-        android:layout_width="191dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="104dp"
-        android:text=""
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wynik"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/vertical_acceleration_text"
-        android:layout_width="296dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginEnd="100dp"
-        android:ems="10"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <Button
+        android:id="@+id/end_cooking_button"
+        android:layout_width="177dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="75dp"
+        android:backgroundTint="#4C8769"
+        android:text="Zakończ smażenie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.165" />
-
-    <TextView
-        android:id="@+id/flip_text"
-        android:layout_width="268dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="101dp"
-        android:layout_marginEnd="100dp"
-        android:ems="10"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.396"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.261" />
-
-    <TextView
-        android:id="@+id/gravity_text"
-        android:layout_width="253dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="99dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginBottom="44dp"
-        android:ems="10"
-        app:layout_constraintBottom_toTopOf="@+id/vertical_acceleration_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/margin_text"
-        android:layout_width="274dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="99dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginBottom="12dp"
-        android:ems="10"
-        app:layout_constraintBottom_toTopOf="@+id/vertical_acceleration_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/patelnia" />
 
     <ImageView
         android:id="@+id/patelnia"
         android:layout_width="260dp"
         android:layout_height="268dp"
-        android:layout_marginTop="272dp"
+        android:layout_marginTop="160dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,39 +34,24 @@
         android:id="@+id/steak"
         android:layout_width="116dp"
         android:layout_height="92dp"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="48dp"
         app:layout_constraintStart_toStartOf="@id/patelnia"
         app:layout_constraintTop_toTopOf="@id/patelnia"
         app:srcCompat="@drawable/right_raw" />
 
     <TextView
-        android:id="@+id/wynik"
-        android:layout_width="191dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="104dp"
-        android:text=""
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="91dp"
+        android:text="Obracaj/Podrzucaj urządzeniem!"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.531"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/patelnia"
-        app:layout_constraintVertical_bias="0.127" />
-
-    <TextView android:id="@+id/strona1view" android:layout_width="84dp" android:layout_height="54dp" android:layout_marginStart="100dp" android:layout_marginTop="46dp" android:layout_marginBottom="59dp" android:text="TextView" app:layout_constraintBottom_toTopOf="@+id/patelnia" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/vertical_acceleration_text" app:layout_constraintVertical_bias="0.0"/>
-    <TextView android:id="@+id/strona2view" android:layout_width="86dp" android:layout_height="53dp" android:layout_marginStart="40dp" android:layout_marginTop="46dp" android:layout_marginBottom="59dp" android:text="TextView" app:layout_constraintBottom_toTopOf="@+id/patelnia" app:layout_constraintStart_toEndOf="@+id/strona1view" app:layout_constraintTop_toBottomOf="@+id/vertical_acceleration_text" app:layout_constraintVertical_bias="0.0"/>
-
-    <Button
-        android:id="@+id/end_cooking_button"
-        android:layout_width="177dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="12dp"
-        android:text="Zakończ smażenie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wynik2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
