--- a/app/src/main/res/layout/menu_layout.xml
+++ b/app/src/main/res/layout/menu_layout.xml
@@ -7,34 +7,63 @@
     android:layout_height="match_parent">
 
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="255dp"
+        android:layout_height="168dp"
+        android:layout_marginStart="78dp"
+        android:layout_marginTop="480dp"
+        android:layout_marginEnd="78dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/left_medium_rare" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="266dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginEnd="89dp"
+        android:layout_weight="1"
+        android:text="Slippery steak"
+        android:textColor="@color/black"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.312"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
-        android:id="@+id/menu_start_button"
+        android:id="@+id/menu_button"
         android:layout_width="315dp"
         android:layout_height="70dp"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="56dp"
         android:layout_weight="1"
         android:backgroundTint="#4C8769"
         android:text="Start Cooking!"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="332dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="236dp"
-        android:layout_marginEnd="89dp"
-        android:layout_weight="1"
-        android:text="Beef cooking game"
-        android:textSize="36sp"
-        android:textColor="@color/black"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="255dp"
+        android:layout_height="168dp"
+        android:layout_marginStart="78dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="78dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/right_raw" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
