--- a/app/src/main/res/layout/result_layout.xml
+++ b/app/src/main/res/layout/result_layout.xml
@@ -6,84 +6,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/your_steak_image"
-        android:layout_width="261dp"
-        android:layout_height="172dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="75dp"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="171dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="171dp"
+        android:text="Your steak:"
+        android:textColor="@color/black"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:srcCompat="@drawable/congratulations_result" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="189dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="190dp"
         android:text="Goal:"
+        android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/your_steak_image" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="171dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="171dp"
-        android:text="Your steak;"
-        android:textSize="25sp"
+    <ImageView
+        android:id="@+id/your_steak_image"
+        android:layout_width="261dp"
+        android:layout_height="172dp"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="75dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:srcCompat="@drawable/question_mark" />
 
     <ImageView
         android:id="@+id/goal_steak_image"
         android:layout_width="248dp"
         android:layout_height="159dp"
         android:layout_marginStart="81dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="82dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:srcCompat="@drawable/rare_result" />
+        app:srcCompat="@drawable/question_mark" />
 
     <TextView
         android:id="@+id/result_text"
-        android:layout_width="137dp"
-        android:layout_height="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="178dp"
-        android:text="You lose!"
-        android:textSize="25sp"
+        android:textColor="@color/black"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.543"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goal_steak_image" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/back_button"
-        android:layout_width="183dp"
-        android:layout_height="50dp"
+        android:id="@+id/result_button"
+        android:layout_width="276dp"
+        android:layout_height="59dp"
         android:layout_marginStart="138dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="138dp"
         android:backgroundTint="#4C8769"
         android:text="Back to menu"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/result_text" />
+        app:layout_constraintTop_toBottomOf="@+id/goal_steak_image" />
 
     <TextView
         android:id="@+id/goal_steak_text"
@@ -92,9 +99,10 @@
         android:layout_marginStart="174dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="174dp"
-        android:text="Rare"
+        android:text=""
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -102,8 +110,8 @@
         android:id="@+id/your_steak_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Very well done"
+        android:layout_marginTop="4dp"
+        android:text=""
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
